# struck

./: CMakeLists.txt
cmake/: StruckConfig.cmake.in
src/: Config.cpp  Config.h  Features.cpp  Features.h  HaarFeature.cpp  HaarFeature.h  HaarFeatures.cpp  HaarFeatures.h  HistogramFeatures.cpp  HistogramFeatures.h  ImageRep.cpp  ImageRep.h  Kernels.h  LaRank.cpp  LaRank.h  MultiFeatures.cpp  MultiFeatures.h  RawFeatures.cpp  RawFeatures.h  Rect.h  Sample.h  Sampler.cpp  Sampler.h  Tracker.cpp  Tracker.h  main.cpp
